deploy/ocp/argo/Network-policy-platform.allow-egress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: faisaltestnp
  namespace: fiservapp1-dev-api
spec:
  tier: platform
  order: 110
  selector: all()
  serviceAccountSelector: ''
  egress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        selector: >-
          (provider == "kubernetes" && component == "apiserver" &&
          endpoints.projectcalico.org/serviceName == "kubernetes")
        namespaceSelector: projectcalico.org/name == "default"
        ports:
          - '443'
          - '6443'
          - '12388'
  types:
    - Egress
