deploy/ocp/argo/defaultns-v3.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: platform.allow-v1
  namespace: default
spec:
  tier: platform
  order: 111
  selector: all()
  serviceAccountSelector: ''
  egress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        selector: >-
          (provider == "kubernetes" && component == "apiserver" &&
          endpoints.projectcalico.org/serviceName == "kubernetes")
        namespaceSelector: projectcalico.org/name == "default"
        ports:
          - '443'
          - '6443'
          - '12388'
  types:
    - Egress
