deploy/ocp/argo/np-v1.yaml
apiVersion: projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: platform.allow-egress-svc-k8s-default2
  #namespace: fiservapp1-dev-api
spec:
  tier: platform
  order: 110
  selector: all()
  serviceAccountSelector: ''
  egress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        selector: >-
          (provider == "kubernetes" && component == "apiserver" &&
          endpoints.projectcalico.org/serviceName == "kubernetes")
        namespaceSelector: projectcalico.org/name == "default"
        ports:
          - '443'
          - '6443'
          - '12388'
  types:
    - Egress
